[gd_scene load_steps=4 format=3 uid="uid://bjaw8dw0tc2qv"]

[ext_resource type="Script" path="res://World/Player/Player/UserInterface/Stove/item_button.gd" id="1_lj34b"]
[ext_resource type="Texture2D" uid="uid://d30i5wlgacql1" path="res://Assets/Images/inventory_icons/Food/baked catfish.png" id="2"]
[ext_resource type="Material" uid="uid://d1xh7kpl8jvj7" path="res://Assets/Themes/HideCollection.tres" id="2_wfss7"]

[node name="item_button" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_lj34b")

[node name="button" type="TextureButton" parent="."]
material = ExtResource("2_wfss7")
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture_normal = ExtResource("2")

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
